# simsiba

./: CMakeLists.txt  Doxyfile  README.md  parse.c  parse.h  simsiba.c  simsiba.h
.github/workflows/: cmake-single-platform.yml  codeql.yml
test/: fuzz.c  fuzz.sh  memory_leaks.sh  unit_test.c  unit_test.sh
